# sosap

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  binding.cc  g2p.cpp  g2p.pyx  pyproject.toml  run.py  setup.py
.github/workflows/: wheels.yml
Phonetisaurus/lib/: util.cc
legacy/: README.md  core.pyx  phonemizer.cc
python/sosap/: __init__.py  _sosap.pyi
rust/: Cargo.toml
rust/src/: decode.rs  fsa.rs  lib.rs  nbest.rs  path_filter.rs  python.rs  symbols.rs  tokenize.rs  wasm.rs
rust/tests/: g2p.rs
src/: core.cpp  core.pyx
src/sosap/: __init__.py
