[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sosap"
version = "0.4.3"
authors = [{ name = "Seanghay Yath", email = "seanghay.dev@gmail.com" }]
description = "Phonetisaurus G2P inference, pure-Rust implementation with Python bindings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/seanghay/sosap"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "python"
module-name = "sosap._sosap"
features = ["pyo3/extension-module", "python"]
strip = true
