[package]
name = "sosap"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Pure-Rust port of Phonetisaurus G2P inference"
repository = "https://github.com/seanghay/sosap"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sosap"
path = "src/bin/sosap.rs"
required-features = ["std-fs"]

[dependencies]
rustfst = "1.3"
thiserror = "1"
anyhow = "1"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"], optional = true }

# rustfst -> rand -> getrandom needs the wasm_js backend on wasm32-unknown-unknown.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"

[features]
default = ["std-fs"]
std-fs = []
python = ["dep:pyo3", "std-fs"]
